LPS-53057 New portlet property

--- a/portlets/calendar-portlet/docroot/WEB-INF/src/portlet.properties
+++ b/portlets/calendar-portlet/docroot/WEB-INF/src/portlet.properties
@@ -2,6 +2,8 @@ include-and-override=portlet-ext.properties
 
 calendar.auto.approve.group.event=false
 
+calendar.auto.approve.group.event.anyuser=false
+
 calendar.color.default=0xD96666
 
 calendar.notification.check.interval=1
