--- a/portlets/calendar-portlet/docroot/WEB-INF/src/portal.properties
+++ b/portlets/calendar-portlet/docroot/WEB-INF/src/portal.properties
@@ -1,10 +1,11 @@
-release.info.build.number=102
+release.info.build.number=103
 release.info.previous.build.number=0
 
 upgrade.processes=\
     com.liferay.calendar.hook.upgrade.UpgradeProcess_1_0_0,\
     com.liferay.calendar.hook.upgrade.UpgradeProcess_1_0_1,\
-    com.liferay.calendar.hook.upgrade.UpgradeProcess_1_0_2
+    com.liferay.calendar.hook.upgrade.UpgradeProcess_1_0_2,\
+    com.liferay.calendar.hook.upgrade.UpgradeProcess_1_0_3
 
 portlet.add.default.resource.check.whitelist=1_WAR_calendarportlet
 
